--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Shantanu Shrikhande</span>
+                <span class="d-block d-lg-none">Kunal Walunj</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/img.jpeg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>-->
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Academic">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
@@ -107,8 +107,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Library Management System</h3>
                             <div class="subheading mb-3">C#, Asp.Net Web forms, MS-SQL Server</div>
-                            <p> •Built a comprehensive Library Management System using ASP.NET Web Forms (C#), featuring modules for book management, student handling, issue/return tracking, and penalty calculation.
-                                • Utilized dataset schemas and MS SQL Server stored procedures for efficient and structured data operations; implemented master pages for a consistent UI layout.                                
+                            <p> •Built a comprehensive Library Management System using ASP.NET Web Forms (C#), featuring modules for book management, student handling, issue/return tracking, and penalty calculation.<br>
+                                • Utilized dataset schemas and MS SQL Server stored procedures for efficient and structured data operations; implemented master pages for a consistent UI layout.<br>                              
                                 •Integrated image assets and custom styles to enhance user experience across both admin and student interfaces.</p>
                         </div>
                      <!--   <div class="flex-shrink-0"><span class="text-primary">Feb 2023 – Apr 2023</span></div>-->
@@ -140,7 +140,7 @@
                             <h3 class="mb-0">Web-Based Code Editor </h3>
                             <div class="subheading mb-3">HTML, CSS, Javascript</div>
                             <p> • Developed an interactive web editor using HTML, CSS, and JavaScript to enable real-time coding and 
-                                previewing. 
+                                previewing.<br>
                                 • Implemented syntax highlighting and error detection for enhanced usability.</p>
                         </div>
                         <!--<div class="flex-shrink-0"><span class="text-primary">Jul 2019 – May 2020</span></div>-->
