--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 • Collaborated with cross-functional teams to improve testing methodologies.<br> 
                                 • Maintained accurate documentation and reporting for audit compliance.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Apr 2021 – Aug 2022</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jul 2023 -May 2024</span></div>
                     </div>
                 </div>
             </section> 
