--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                     <p class="lead mb-5">Dedicated and detail-oriented Software Developer with expertise in front-end and back-end development. Proficient in multiple programming languages and frameworks with hands-on experience in designing and developing web applications. </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="www.linkedin.com/in/kunal-walunj"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/kunal-walunj"><i class="fab fa-linkedin-in"></i></a>
                         <!-- <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>-->
                         <!-- <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>  -->
